Directives, routes et pipes

--- a/ng-pokemon-app/src/app/app.component.html
+++ b/ng-pokemon-app/src/app/app.component.html
@@ -1,40 +1,9 @@
-<!-- <h3>Welcome to Pokemon App !</h3>
-<h4>Quel est l'id du Pokemon que vous recherchez ?</h4>
-<input 
-  #input
-  (keyup.enter)="selectPokemon(input.value)"
-  type="number"
-/>
+<nav>
+    <div class="nav-wrapper">
+        <a href="#" class="brand-logo center">
+            Pokédex
+        </a>
+    </div>    
+</nav>
 
-<p *ngIf="pokemonSelected">
-  Vous avez sélectionné le pokémon : {{ pokemonSelected.name }}
-</p> 
-
-<p *ngIf="!pokemonSelected">
-  Aucun pokémon sélectionné.
-</p>
-
-<h4>Voilà la liste des Pokémons :</h4>
-
-<ul *ngFor="let pokemon of pokemonList">
-  <li>{{ pokemon.name }}</li>
-</ul> -->
-
-<h1 class="center" style="font-family: Jazz LET, fantasy ; color: purple ; text-shadow: 1px 1px 2px black ; text-decoration: underline ; text-decoration-color: purple">Liste de Pokémons</h1>
-
-<div class="container">
-  <div class="row">
-    <div *ngFor="let pokemon of pokemonList" class="col m4 s6">
-      <div class="card horizontal" style="border: solid purple">
-        <div class="card-image" style="margin:auto ; padding-left: 5px">
-          <img [src]="pokemon.picture" style="width: 80px; height: 80px;">
-      </div>
-      <div class="card-stacked">
-        <div class="card-content">
-          <p>{{ pokemon.name }}</p>
-          <p><small>{{ pokemon.created }}</small></p>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+<router-outlet></router-outlet>
