Avant requêtes HTTP

--- a/ng-pokemon-app/src/app/app.component.html
+++ b/ng-pokemon-app/src/app/app.component.html
@@ -1,7 +1,10 @@
 <nav>
-    <div class="nav-wrapper">
+    <div>
         <a href="#" class="brand-logo center">
-            Pokédex
+            <div style="display: flex; align-items: center;">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Pok%C3%A9_Ball_icon.svg" style="height: 40px; margin-right: 5px;">
+                <span>POKÉDEX</span>
+            </div>          
         </a>
     </div>    
 </nav>
