--- a/ng-pokemon-app/src/app/pokemon/list-pokemon/list-pokemon.component.html
+++ b/ng-pokemon-app/src/app/pokemon/list-pokemon/list-pokemon.component.html
@@ -3,8 +3,8 @@
       <div *ngFor="let pokemon of pokemonList" class="col m4 s6">
         <div class="card horizontal" pkmnBorderCard>
           <div (click)="goToPokemon(pokemon)" class="card-image" style="margin:auto ; padding-left: 5px">
-            <img [src]="pokemon.picture" style="width: 150px; height: 150px;">
-        </div>
+            <img [src]="pokemon.picture" style="width: 150px"> 
+        </div> 
         <div class="card-stacked">
           <div class="card-content">
             <p>{{ pokemon.name }}</p>
