Ajout de la lib RxJS

--- a/pokemon-app/src/app/app.component.html
+++ b/pokemon-app/src/app/app.component.html
@@ -1,5 +1,5 @@
 <nav>
-    <div class="nav-wrapper">
+    <div class="nav-wrapper" style="background-color: #26a69a;">
         <a href="#" class="brand-logo center">
             <div style="display: flex; align-items: center;">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Pok%C3%A9_Ball_icon.svg" style="height: 40px; margin-right: 5px;">
