--- a/pokemon-app/src/app/pokemon/pokemon-form/pokemon-form.component.html
+++ b/pokemon-app/src/app/pokemon/pokemon-form/pokemon-form.component.html
@@ -18,6 +18,20 @@
             </div>
           </div>
     
+          <!-- Pokemon picture -->
+          <div *ngIf="isAddForm" class="form-group">
+            <label for="picture">Image</label>
+            <input type="url" class="form-control" id="picture"
+                   required
+                   [(ngModel)]="pokemon.picture" name="picture"
+                   #picture="ngModel">
+    
+            <div [hidden]="picture.valid || picture.pristine"
+                  class="card-panel red accent-1">
+                  L'image du pokémon est requise.
+            </div>
+          </div>
+
           <!-- Pokemon hp -->
           <div class="form-group">
             <label for="hp">Point de vie</label>
@@ -80,4 +94,6 @@
       </div>
     </div>
   </form>
-  <h3 *ngIf="!pokemon" class="center">Aucun pokémon à éditer...</h3>
+  <h3 *ngIf="!pokemon" class="center">
+    <app-loader></app-loader>
+  </h3>
