--- a/pokemon-app/src/app/pokemon/list-pokemon/list-pokemon.component.html
+++ b/pokemon-app/src/app/pokemon/list-pokemon/list-pokemon.component.html
@@ -1,5 +1,10 @@
+
+
 <div class="container">
   <div class="row">
+
+    <app-search-pokemon></app-search-pokemon>
+    
     <div *ngFor="let pokemon of pokemonList" class="col m4 s6">
       <div class="card horizontal" pkmnBorderCard>
         <div (click)="goToPokemon(pokemon)" class="card-image" style="margin:auto ; padding-left: 5px">
@@ -18,3 +23,11 @@
     </div>
   </div>
 </div>
+
+<a 
+  class="btn-floating btn-large waves-effect waves-light z-depth-3" 
+  style="position: fixed; bottom: 25px; right: 25px;"
+  routerLink="/pokemon/add"
+>
+  ✚
+</a>
