Add footer to the app

--- a/pokemon-app/src/app/app.component.html
+++ b/pokemon-app/src/app/app.component.html
@@ -10,3 +10,29 @@
 </nav>
 
 <router-outlet></router-outlet>
+
+<footer class="page-footer" style="background-color: #26a69a">
+    <div class="container">
+      <div class="row">
+        <div class="col l6 s12">
+          <h5 class="white-text">À propos de PokemonApp ..</h5>
+          <p class="grey-text text-lighten-4">
+            PokemonApp est un site web créé par shxclem du 13/06/24 au 20/06/24 durant son stage au sein de l'entreprise Ardian.
+            L'objectif de ce dernier était l'apprentissage du langage Angular qui n'avait jamais été utilisé auparavant.  
+          </p>
+        </div>
+        <div class="col l4 offset-l2 s12">
+          <h5 class="white-text">Liens utiles :</h5>
+          <ul>
+            <li><a style="color: white" href="https://github.com/shxclem/ardian/tree/main">GitHub : shxclem/ardian</a></li>
+            <li><a style="color: white" href="https://www.youtube.com/watch?v=DTIYVffhJuU">Formation suivie : Simon Dieny / Code Senior</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="footer-copyright">
+      <div class="container center">
+      © Copyright 2024 Ardian PokedexApp / All rights reserved
+      </div>
+    </div>
+</footer>
