--- a/pokemon-app/src/app/pokemon/search-pokemon/search-pokemon.component.html
+++ b/pokemon-app/src/app/pokemon/search-pokemon/search-pokemon.component.html
@@ -2,11 +2,11 @@
     <div class="col s12 m6 offset-m3">
         <div class="card">
             <div class="card-content">
+                <span class="card-title center" style="font-weight: 500 ; text-decoration: underline #26a69a">Rechercher un pokémon :</span>
                 <div class="input-field">
                     <input 
                         #searchBox
                         (keyup)="search(searchBox.value)"
-                        placeholder="Rechercher un pokémon"
                     />
                 <div class="collection">
                     <a *ngFor="let pokemon of pokemons$ | async"
